wwr/styles/rafting.css
:root {
    /* Color Schema */
    --primary-color: #F6CF26;
    --secondary-color: #1C9CC5;
    --accent-1-color: #fd1e11;
    --accent-2-color: #C8AE84;

    /* RGBA */
    --primary-background: rgba(246, 207, 38, 0.8);
    --secondary-background: rgba(0, 187, 197, 0.7);

    /* Complementary */
    --black-tone: #000000;
    --white-tone: #FFFFFF;
    
    /* Typography: Heading */
    --heading-font-family: "Racing Sans One", serif;
    --heading-font-weight: 400;
    
    /* Typography: Body */
    --body-font-family: "Roboto", serif;
    --heading-font-weight-bold: 700;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    max-width: 1024px;
    position: absolute;
    left: 50%;
    transform: translate(-50%);
}

h1, h2, h3, h4, h5, h6 {
    font-family: var(--heading-font-family);
    font-weight: var(--heading-font-weight);
}

header {
    display: grid;
    grid-template-columns: auto 1fr;
    align-items: center;
    margin-bottom: 15px;
}

header img {
    width: 150px;
    height: auto;
}

header nav {
    width: 100%;
    display: flex;
    justify-content: center;
    justify-self: center;
}

header nav a {
    text-decoration: none;
    color: #000000;
    padding: 1rem 4rem;
    text-align: center;
    background-color: var(--accent-1-color);
}

p, nav a {
    font-family: var(--body-font-family);
    font-weight: var(--heading-font-weight);
    font-style: normal;
}

/* hero */

.hero {
    position: relative;
}

.hero > img {
    width: 100%;
    display: block;
    height: auto;

}
.hero h1 {
    position: absolute;
    top: 35%;
    left: 50%;
    transform: translate(-50%, -150%);
    display: block;
    width: 100%;
    text-align: center;
    background-color: var(--primary-background);
}

/* hero article */

.hero article {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%);
    width: 80%;
    background-color: var(--secondary-background);
    backdrop-filter: blur(10px);
}

.hero article p {
    padding: 15px;
    clear: none;
    color: var(--white-tone);
}

.hero article img {
    float: right;
    padding: 5px;
}

/* history */

.history {
    padding: 1rem 0 1rem 0;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
}

.history h2 {
    grid-column: 1/4;
    text-align: center;
}

/* gallery */

.gallery {
    padding: 1rem 0 1rem 0;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    gap: 10px;
    justify-items: center;
    align-items: center;
}

.gallery h2 {
    grid-column: 1/6;
}

/* footer */

footer {
    background-color: var(--secondary-background);
    display: flex;
    align-items: center;
    justify-content: space-around;
    padding: 1rem;
}

footer nav a {
    text-decoration: none;
}

footer nav a img {
    width: 48px;
    height: auto;
}

